# TeacherRating

./: .breakpoints  database.py  main.py  py_functions.py  pyproject.toml
static/: 404.css  dashboard.css  dashboard_mobile.css  hhomepage.css  login.css  login_mobile.css  results.css  survey.css  survey.js  takensurvey.css
templates/: 404.html  dashboard.html  login.html  login_admin.html  results.html  survey.html  takenSurvey.html
