[tool.poetry]
name = "repl_python3_TeacherRating"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"
bs4 = "^0.0.1"
lxml = "^4.6.3"
pymongo = "^3.12.1"
dnspython = "^2.1.0"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
